--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="hero bg-light text-center d-flex align-items-center" style="background-image: url('Images/hero-image.jpg');">
+  <section class="hero bg-light text-center d-flex align-items-center" style="background-image: url('./Images/hero-image.jpg');">
     <div class="container">
       <h1 class="display-4">Explore the Latest Trends</h1>
       <p class="lead">Shop now and discover our exclusive collection.</p>
