--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fictional E-commerce Store</title>
-  <link rel="icon" href="Images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./Images/favicon.ico" type="image/x-icon">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -60,7 +60,7 @@
         <!-- Product Card 1 -->
         <div class="col-lg-3 col-md-4 col-sm-6">
           <div class="card product-card">
-            <img src="Images/product1.jpg" class="card-img-top" alt="Product 1">
+            <img src="./Images/product1.jpg" class="card-img-top" alt="Product 1">
             <div class="card-body">
               <h5 class="card-title">Product 1</h5>
               <p class="card-text">₹599.99</p>
@@ -72,7 +72,7 @@
         <!-- Product Card 2 -->
         <div class="col-lg-3 col-md-4 col-sm-6">
           <div class="card product-card">
-            <img src="Images/product2.jpg" class="card-img-top" alt="Product 2">
+            <img src="./Images/product2.jpg" class="card-img-top" alt="Product 2">
             <div class="card-body">
               <h5 class="card-title">Product 2</h5>
               <p class="card-text">₹599.99</p>
@@ -84,7 +84,7 @@
          <!-- Product Card 3 -->
          <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="card product-card">
-              <img src="Images/product3.jpg" class="card-img-top" alt="Product 1">
+              <img src="./Images/product3.jpg" class="card-img-top" alt="Product 1">
               <div class="card-body">
                 <h5 class="card-title">Product 3</h5>
                 <p class="card-text">₹599.99</p>
@@ -96,7 +96,7 @@
            <!-- Product Card 4 -->
          <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="card product-card">
-              <img src="Images/product4.jpg" class="card-img-top" alt="Product 1">
+              <img src="./Images/product4.jpg" class="card-img-top" alt="Product 1">
               <div class="card-body">
                 <h5 class="card-title">Product 4</h5>
                 <p class="card-text">₹599.99</p>
@@ -108,7 +108,7 @@
            <!-- Product Card 5 -->
          <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="card product-card">
-              <img src="Images/product5.png" class="card-img-top" alt="Product 1">
+              <img src="./Images/product5.png" class="card-img-top" alt="Product 1">
               <div class="card-body">
                 <h5 class="card-title">Product 5</h5>
                 <p class="card-text">₹599.99</p>
@@ -120,7 +120,7 @@
            <!-- Product Card 5 -->
          <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="card product-card">
-              <img src="Images/product6.png" class="card-img-top" alt="Product 1">
+              <img src="./Images/product6.png" class="card-img-top" alt="Product 1">
               <div class="card-body">
                 <h5 class="card-title">Product 6</h5>
                 <p class="card-text">₹599.99</p>
@@ -132,7 +132,7 @@
            <!-- Product Card 5 -->
          <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="card product-card">
-              <img src="Images/product7.png" class="card-img-top" alt="Product 1">
+              <img src="./Images/product7.png" class="card-img-top" alt="Product 1">
               <div class="card-body">
                 <h5 class="card-title">Product 7</h5>
                 <p class="card-text">₹599.99</p>
@@ -144,7 +144,7 @@
            <!-- Product Card 5 -->
          <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="card product-card">
-              <img src="Images/product8.png" class="card-img-top" alt="Product 1">
+              <img src="./Images/product8.png" class="card-img-top" alt="Product 1">
               <div class="card-body">
                 <h5 class="card-title">Product <8/h5>
                 <p class="card-text">₹599.99</p>
@@ -169,7 +169,7 @@
         <!-- Blog Post 1 -->
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <img src="Images/blog_1.jpg" class="card-img-top" alt="Blog Image 1">
+            <img src="./Images/blog_1.jpg" class="card-img-top" alt="Blog Image 1">
             <div class="card-body">
               <h5 class="card-title">How to Choose the Perfect Leather Jacket</h5>
               <p class="card-text">Discover tips for selecting the right leather jacket that matches your style and fits perfectly. Learn more!</p>
@@ -181,7 +181,7 @@
         <!-- Blog Post 2 -->
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <img src="Images/blog_2.jpg" class="card-img-top" alt="Blog Image 2">
+            <img src="./Images/blog_2.jpg" class="card-img-top" alt="Blog Image 2">
             <div class="card-body">
               <h5 class="card-title">Winter Fashion Trends 2024</h5>
               <p class="card-text">Stay ahead of the curve with the latest fashion trends for winter 2024. From cozy sweaters to chic boots, we’ve got you covered.</p>
@@ -193,7 +193,7 @@
         <!-- Blog Post 3 -->
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100">
-            <img src="Images/blog_3.jpg" class="card-img-top" alt="Blog Image 3">
+            <img src="./Images/blog_3.jpg" class="card-img-top" alt="Blog Image 3">
             <div class="card-body">
               <h5 class="card-title">The Ultimate Guide to Accessorizing</h5>
               <p class="card-text">Accessories can make or break your outfit. Discover the ultimate guide to choosing the right accessories for any occasion.</p>
