--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fictional E-commerce Store</title>
-    <link rel="icon" href="Images/favicon.ico" type="image/x-ic
+    <link rel="icon" href="./Images/favicon.ico" type="image/x-ic
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -64,7 +64,7 @@
             <!-- Blog Post 1 -->
             <div class="col-md-6 mb-4">
               <div class="card h-100">
-                <img src="Images/blog_1.jpg" class="card-img-top" alt="Blog Image 1">
+                <img src="./Images/blog_1.jpg" class="card-img-top" alt="Blog Image 1">
                 <div class="card-body">
                   <h5 class="card-title">How to Style Your Winter Wardrobe</h5>
                   <p class="card-text">Get the best fashion tips for styling your winter wardrobe with trendy outfits and accessories.</p>
@@ -75,7 +75,7 @@
             <!-- Blog Post 2 -->
             <div class="col-md-6 mb-4">
               <div class="card h-100">
-                <img src="Images/blog_2.jpg" class="card-img-top" alt="Blog Image 2">
+                <img src="./Images/blog_2.jpg" class="card-img-top" alt="Blog Image 2">
                 <div class="card-body">
                   <h5 class="card-title">5 Must-Have Accessories for Summer</h5>
                   <p class="card-text">Discover the hottest accessories you need to rock your summer outfits this year.</p>
@@ -86,7 +86,7 @@
             <!-- Blog Post 3 -->
             <div class="col-md-6 mb-4">
               <div class="card h-100">
-                <img src="Images/blog_3.jpg" class="card-img-top" alt="Blog Image 3">
+                <img src="./Images/blog_3.jpg" class="card-img-top" alt="Blog Image 3">
                 <div class="card-body">
                   <h5 class="card-title">The Ultimate Guide to Layering Clothes</h5>
                   <p class="card-text">Master the art of layering clothes for both fashion and functionality in every season.</p>
@@ -97,7 +97,7 @@
             <!-- Blog Post 4 -->
             <div class="col-md-6 mb-4">
               <div class="card h-100">
-                <img src="Images/blog_1.jpg" class="card-img-top" alt="Blog Image 4">
+                <img src="./Images/blog_1.jpg" class="card-img-top" alt="Blog Image 4">
                 <div class="card-body">
                   <h5 class="card-title">Top 10 Fashion Tips for 2024</h5>
                   <p class="card-text">Stay ahead of the fashion game with our top 10 tips and tricks for the upcoming year.</p>
@@ -160,7 +160,7 @@
             <div class="card-header">Featured Blog Post</div>
             <div class="card-body">
               <div class="media">
-                <img src="Images/feature.jpg" class="mr-3 img-fluid" alt="Featured Post" style="width: 100px;">
+                <img src="./Images/feature.jpg" class="mr-3 img-fluid" alt="Featured Post" style="width: 100px;">
                 <div class="media-body">
                   <h5 class="mt-0">Top Fashion Trends of 2024</h5>
                   <p>Stay ahead of the trends with our comprehensive guide to the hottest fashion in 2024.</p>
