--- a/productdetails.html
+++ b/productdetails.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fictional E-commerce Store</title>
-    <link rel="icon" href="Images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./Images/favicon.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -54,7 +54,7 @@
         <!-- Image Gallery -->
         <div class="col-lg-6">
           <div class="main-product-image">
-            <img src="Images/productdetail.jpg" alt="Main Product Image" class="img-fluid">
+            <img src="./Images/productdetail.jpg" alt="Main Product Image" class="img-fluid">
           </div>
         </div>
 
