--- a/shop.html
+++ b/shop.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fictional E-commerce Store</title>
-  <link rel="icon" href="Images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./Images/favicon.ico" type="image/x-icon">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -14,7 +14,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="Index.html"><h2>TASHU STORE</h2></a>
+      <a class="navbar-brand" href="index.html"><h2>TASHU STORE</h2></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -51,7 +51,7 @@
         <!-- Product Card 1 -->
         <div class="col-lg-3 col-md-4 col-sm-6">
           <div class="card product-card">
-            <img src="Images/product1.jpg" class="card-img-top" alt="Product 1">
+            <img src="./Images/product1.jpg" class="card-img-top" alt="Product 1">
             <div class="card-body">
               <h5 class="card-title">Product 1</h5>
               <p class="card-text">₹599.99</p>
@@ -63,7 +63,7 @@
         <!-- Product Card 2 -->
         <div class="col-lg-3 col-md-4 col-sm-6">
           <div class="card product-card">
-            <img src="Images/product2.jpg" class="card-img-top" alt="Product 2">
+            <img src="./Images/product2.jpg" class="card-img-top" alt="Product 2">
             <div class="card-body">
               <h5 class="card-title">Product 2</h5>
               <p class="card-text">₹599.99</p>
@@ -75,7 +75,7 @@
          <!-- Product Card 3 -->
          <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="card product-card">
-              <img src="Images/product3.jpg" class="card-img-top" alt="Product 1">
+              <img src="./Images/product3.jpg" class="card-img-top" alt="Product 1">
               <div class="card-body">
                 <h5 class="card-title">Product 3</h5>
                 <p class="card-text">₹599.99</p>
@@ -87,7 +87,7 @@
            <!-- Product Card 4 -->
          <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="card product-card">
-              <img src="Images/product4.jpg" class="card-img-top" alt="Product 1">
+              <img src="./Images/product4.jpg" class="card-img-top" alt="Product 1">
               <div class="card-body">
                 <h5 class="card-title">Product 4</h5>
                 <p class="card-text">₹599.99</p>
@@ -99,7 +99,7 @@
            <!-- Product Card 5 -->
          <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="card product-card">
-              <img src="Images/product5.png" class="card-img-top" alt="Product 1">
+              <img src="./Images/product5.png" class="card-img-top" alt="Product 1">
               <div class="card-body">
                 <h5 class="card-title">Product 5</h5>
                 <p class="card-text">₹599.99</p>
@@ -111,7 +111,7 @@
            <!-- Product Card 5 -->
          <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="card product-card">
-              <img src="Images/product6.png" class="card-img-top" alt="Product 1">
+              <img src="./Images/product6.png" class="card-img-top" alt="Product 1">
               <div class="card-body">
                 <h5 class="card-title">Product 6</h5>
                 <p class="card-text">₹599.99</p>
@@ -123,7 +123,7 @@
            <!-- Product Card 5 -->
          <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="card product-card">
-              <img src="Images/product7.png" class="card-img-top" alt="Product 1">
+              <img src="./Images/product7.png" class="card-img-top" alt="Product 1">
               <div class="card-body">
                 <h5 class="card-title">Product 7</h5>
                 <p class="card-text">₹599.99</p>
@@ -135,7 +135,7 @@
            <!-- Product Card 5 -->
          <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="card product-card">
-              <img src="Images/product8.png" class="card-img-top" alt="Product 1">
+              <img src="./Images/product8.png" class="card-img-top" alt="Product 1">
               <div class="card-body">
                 <h5 class="card-title">Product 8<8/h5>
                 <p class="card-text">₹599.99</p>
@@ -148,7 +148,7 @@
           <!-- Product Card 1 -->
         <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="card product-card">
-              <img src="Images/product1.jpg" class="card-img-top" alt="Product 1">
+              <img src="./Images/product1.jpg" class="card-img-top" alt="Product 1">
               <div class="card-body">
                 <h5 class="card-title">Product 9</h5>
                 <p class="card-text">₹599.99</p>
@@ -160,7 +160,7 @@
           <!-- Product Card 2 -->
           <div class="col-lg-3 col-md-4 col-sm-6">
             <div class="card product-card">
-              <img src="Images/special_product_4.jpg" class="card-img-top" alt="Product 2">
+              <img src="./Images/special_product_4.jpg" class="card-img-top" alt="Product 2">
               <div class="card-body">
                 <h5 class="card-title">Product 10</h5>
                 <p class="card-text">₹599.99</p>
@@ -172,7 +172,7 @@
            <!-- Product Card 3 -->
            <div class="col-lg-3 col-md-4 col-sm-6">
               <div class="card product-card">
-                <img src="Images/special_product_3.jpg" class="card-img-top" alt="Product 1">
+                <img src="./Images/special_product_3.jpg" class="card-img-top" alt="Product 1">
                 <div class="card-body">
                   <h5 class="card-title">Product 11</h5>
                   <p class="card-text">₹599.99</p>
@@ -184,7 +184,7 @@
              <!-- Product Card 4 -->
            <div class="col-lg-3 col-md-4 col-sm-6">
               <div class="card product-card">
-                <img src="Images/special_product_1.jpg" class="card-img-top" alt="Product 1">
+                <img src="./Images/special_product_1.jpg" class="card-img-top" alt="Product 1">
                 <div class="card-body">
                   <h5 class="card-title">Product 12</h5>
                   <p class="card-text">₹599.99</p>
@@ -196,7 +196,7 @@
              <!-- Product Card 5 -->
            <div class="col-lg-3 col-md-4 col-sm-6">
               <div class="card product-card">
-                <img src="Images/product5.png" class="card-img-top" alt="Product 1">
+                <img src="./Images/product5.png" class="card-img-top" alt="Product 1">
                 <div class="card-body">
                   <h5 class="card-title">Product 13</h5>
                   <p class="card-text">₹599.99</p>
@@ -208,7 +208,7 @@
              <!-- Product Card 5 -->
            <div class="col-lg-3 col-md-4 col-sm-6">
               <div class="card product-card">
-                <img src="Images/product6.png" class="card-img-top" alt="Product 1">
+                <img src="./Images/product6.png" class="card-img-top" alt="Product 1">
                 <div class="card-body">
                   <h5 class="card-title">Product 14</h5>
                   <p class="card-text">₹599.99</p>
@@ -220,7 +220,7 @@
              <!-- Product Card 5 -->
            <div class="col-lg-3 col-md-4 col-sm-6">
               <div class="card product-card">
-                <img src="Images/product7.png" class="card-img-top" alt="Product 1">
+                <img src="./Images/product7.png" class="card-img-top" alt="Product 1">
                 <div class="card-body">
                   <h5 class="card-title">Product 15</h5>
                   <p class="card-text">₹599.99</p>
@@ -232,7 +232,7 @@
              <!-- Product Card 5 -->
            <div class="col-lg-3 col-md-4 col-sm-6">
               <div class="card product-card">
-                <img src="Images/product8.png" class="card-img-top" alt="Product 1">
+                <img src="./Images/product8.png" class="card-img-top" alt="Product 1">
                 <div class="card-body">
                   <h5 class="card-title">Product 16<8/h5>
                   <p class="card-text">₹599.99</p>
